#37, smooths the fadein/out on the share and fixes a 1 pixel gap

--- a/css/style.css
+++ b/css/style.css
@@ -817,10 +817,19 @@ a.project p {
 	vertical-align: center;
 }
 
+.social {
+	position: relative;
+}
 
 .social .sharewrapper {
+	position: absolute; top: 0; left: 0;
 	border-radius: 0 4px 4px 0;
 	background-color:  #848d8f;
 	text-align: center;
-	padding: 6px 5px 3px 7px;
+	padding: 6px 8px 2px;
+}
+
+.social .sharebutton {
+	display: block;
+	position: absolute; top: 1px; left: 20px;
 }
